# med-model-evals

./: .gitignore  README.md  RESULTS_INDEX.md  converter.ipynb  dashboard.html  debug_pdf_text.py  generate_dashboard.py  generate_index.py  medical_model_runner.py  pyproject.toml  questions.jsonl  questions.txt
axiong_PMC_LLaMA_13B/: 1.txt  10.md  11.txt  12.md  13.md  14.txt  15.md  16.md  17.txt  18.md  19.txt  2.md  20.md  3.txt  4.md  5.md  6.txt  7.txt  8.md  9.txt
gemini-3-pro-preview/: 1.txt  10.md  11.md  12.md  13.md  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.md  20.md  3.txt  4.txt  5.txt  6.md  7.md  8.md  9.txt
google_medgemma-27b-text-it/: 1.txt  10.md  11.txt  12.txt  13.md  14.md  15.txt  16.md  17.txt  18.txt  19.txt  2.md  20.txt  3.md  4.txt  5.md  6.md  7.md  8.txt  9.md
gpt-4o/: 1.md  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.md  17.txt  18.txt  19.txt  2.txt  20.txt  3.txt  4.md  5.txt  6.txt  7.md  8.md  9.txt
openevidence/: 1.md  10.md  11.md  12.md  13.md  14.md  15.md  16.md  17.md  18.md  19.md  2.md  20.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md
perplexity/: 1.md  10.md  11.md  12.md  13.md  14.md  15.md  16.md  17.md  18.md  19.md  2.md  20.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md
