[project]
name = "med-model-evals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.0",
    "google-generativeai>=0.8.6",
    "markdown>=3.10",
    "openai>=2.14.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]
